# azure-cli-proxy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  api.hnbk
.github/workflows/: rust.yml
src/: args.rs  main.rs
